--- a/mini-project/css/user-details.css
+++ b/mini-project/css/user-details.css
@@ -12,7 +12,7 @@
     background: #6c6a6a;
 }
 .container{
-    max-width: 90%;
+    max-width: 1300px;
     margin: 0 auto;
 }
 .user__colom{
@@ -60,6 +60,7 @@
 .post{
     display: flex;
     flex-direction: column;
+    flex: 1 1 240px;
 }
 .post__colom{
     display: flex;
@@ -67,7 +68,7 @@
     align-items: center;
     text-align: center;
     padding: 10px;
-    max-width: 240px;
+    /*max-width: 240px;*/
     margin: 10px 15px;
     border: #adaaaa 1px solid;
     flex: 1 1 auto;
